feat: enhance CLI with interactive prompts and production-ready features
- Add interactive scope selection (user/local/project) with user as default
- Add executable path validation and testing
- Enhance error handling for claude mcp add-json command
- Add comprehensive help documentation
- Update .gitignore to exclude CLAUDE.md and node_modules
- Update package.json with correct author and repository info
- Add server name validation and customization
- Improve verbose output and debugging capabilities

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "automation",
     "cli"
   ],
-  "author": "Your Name",
+  "author": "gyasis",
   "license": "MIT",
   "dependencies": {
     "commander": "^11.1.0",
@@ -30,10 +30,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/mcp-auto-add"
+    "url": "https://github.com/gyasis/mcp-auto-add"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/mcp-auto-add/issues"
+    "url": "https://github.com/gyasis/mcp-auto-add/issues"
   },
-  "homepage": "https://github.com/yourusername/mcp-auto-add#readme"
+  "homepage": "https://github.com/gyasis/mcp-auto-add#readme"
 } 
